css/master.css
/*––––––––––––––––––––––––––*/
/*––––– CSS animations –––––*/
/*––––––––––––––––––––––––––*/
@keyframes logo {
	100% {
		-ms-transform: translateY(-500%);
		-moz-transform: translateY(-500%);
		-o-transform: translateY(-500%);
		-webkit-transform: translateY(-500%);
		transform: translateY(-500%);
	}}
@keyframes browser {
	50% {
		-ms-transform: translateY(-35%);
		-webkit-transform: translateY(-35%);
		-moz-transform: translateY(-35%);
		-o-transform: translateY(-35%);
		transform: translateY(-35%);
	}
	100% {
		-ms-transform: translateY(-95%);
		-moz-transform: translateY(-95%);
		-webkit-transform: translateY(-95%);
		-o-transform: translateY(-95%);
		transform: translateY(-95%);
	}}

@keyframes scale-up {
	100% {
		-ms-transform: scale(1.1);
		-webkit-transform: scale(1.1);
		-o-transform: scale(1.1);
		-moz-transform: scale(1, 1);
		transform: scale(1.1);
	}
}
@keyframes skew {
	0% {
		-ms-transform: skew(0deg, 0deg);
		-webkit-transform: skew(0deg, 0deg);
		-o-transform: skew(0deg, 0deg);
		-moz-transform: skew(0deg, 0deg);
		transform: skew(0deg, 0deg)
	}
	50% {
		-ms-transform: skew(-1deg, 2deg);
		-webkit-transform: skew(-1deg, 2deg);
		-o-transform: skew(-1deg, 2deg);
		-moz-transform: skew(-1deg, 2deg);
		transform: skew(-1deg, 2deg);
	}
	100% {
		-ms-transform: skew(0deg, 0deg);
		-webkit-transform: skew(0deg, 0deg);
		-o-transform: skew(0deg, 0deg);
		-moz-transform: skew(0deg, 0deg);
		transform: skew(0deg, 0deg);
	}}
@keyframes fade-in {0% {opacity: 0;} 100% {opacity: 1;}};

@keyframes valid { 100% { box-shadow: 0 0 8px rgb(150, 206, 180);}}

@keyframes bgColor {
	0% {
		background-color: rgb(150, 206, 180);
	}
	25% {
		background-color: rgb(255, 238, 173);
	}
	50% {
		background-color: rgb(255, 111, 105);
	}
	75% {
		background-color: rgb(255, 204, 92);
	}
	90% {
		background-color: rgb(170, 216, 176);
	}
	100% {
		background-color: rgb(150, 206, 180);
	}
}

/*––––––––––––––––––––––*/
/*––––– Global CSS –––––*/
/*––––––––––––––––––––––*/
html, body {
	height: 100%;
	margin: 0;
	padding: 0;
	color: #333;
	font-size: 100%;
	font-family: 'Noto Sans', sans-serif;
}

h1,h2,h3,h4 {
	font-family: 'Fredoka One', sans-serif;
	text-align: center;
}

a {
	text-decoration: none;
	color: #333;
}
a:hover {
	color: #555;
}

.fade-in {
	transition-delay: 1s;
	animation-name: fade-in;
	animation-duration: 1s;
	animation-fill-mode: forwards;
}

.select-disable {
	/*Disable highlight selection on imgs */
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}

.full-screen {
	height: 100%;
	width: 100%;
	position: relative;
	overflow: hidden;
}

.content {
	max-height: 100%;
	padding: 5% 5%;
	position: relative;
}

#warning {
	top: 0;
	left: 0;
	position: fixed;
	display: none;
}

#overlay-container {
	position: fixed;
	display: none;
	z-index: 99;
	height: 100%;
	width: 100%;
	background: rgba(0, 0, 0, 0.3);
}

#overlay {
	position: relative;
	text-align: center;
	box-sizing: border-box;
	font-size: 90%;
	top: 5%;
	left: 25%;
	width: 50%;
	padding: 3%;
	border-radius: 15px;
	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
	background-color: #fff;
	z-index: 99;
}

/* #overlay-text-content>p {

} */

#overlay-text-content>h1 {
	margin-top: 5px;
}
#overlay-btn {
	position: relative;
	box-sizing: border-box;
	cursor: pointer;
	text-align: center;
	left: 40%;
	width: 20%;
	margin-top: 20px;
	padding: 10px;
	border: solid 1px #bbb;
	border-radius: 25px;
	background: rgb(150, 206, 180);
	transition: 200ms;
}

#overlay-btn a {
	color: #fff;
}

#overlay-btn:active {
	box-shadow: inset 0px 0px 15px rgba(0, 0, 0, 0.3);
	transition: 50ms;
}

#overlay-btn:hover {
	background: rgb(140, 196, 170);
}

#factory {
	background: #96CEB4;
}

#second {
	background: #FFEEAD;
}

 #underwater {
   background: #FF6F69;
}

#server {
   background: #FFCC5C;
}

/*
#fifth {
   background: #AAD8B0;
} */

/*–––––––––––––––––––––*/
/*––––– Intro CSS –––––*/
/*–––––––––––––––––––––*/
#intro, #puzzle {
	animation-name: bgColor;
	animation-duration: 10s;
	animation-iteration-count: infinite;
	animation-fill-mode: forwards;
}

#logo {
	position: absolute;
	top: 35%;
	left: 25%;
	width: 50%;
	animation-name: logo;
	animation-delay: 2.5s;
	animation-duration: 1.5s;
	animation-fill-mode: forwards;
}

#browser-container {
	position: absolute;
	font-size: 0;/* remove white space */
	z-index: 0;
	top: 100%;
	left: 13%;
	width: 74%;
	animation-name: browser;
	animation-delay: 1s;
	animation-duration: 3s;
	animation-fill-mode: forwards;
}

#scale {
	transition: ease-in-out 500ms;
}

/* Scale browser and url */
.scale-up {
	-ms-transform: scale(1.1);
	-webkit-transform: scale(1.1);
	-o-transform: scale(1.1);
	-moz-transform: scale(1.1);
	transform: scale(1.1);
}

#browser {
	position: relative;
	display: block;
	height: 100%;
	width: 100%;
	border-radius: 15px;
	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
}

#form {
	position: absolute;
	display: flex;
	align-items: center;
	cursor: pointer;
	height: 9%;
	width: 100%;
	z-index: 1;
}

#url {
	cursor: pointer;
	z-index: 2;
	height: 41%;
	padding: 0 10px;
	margin: 0 15%;
	width: 70%;
	border: 1px solid rgba(150, 206, 180, 0) !important;
	border-radius: 5px;
	font-size: 16px;
	opacity: 0;
	animation-delay: 4s;
	/* fade-in */
	transition: ease-in-out 250ms;
}


/* Try to override browser defaults */
#form:hover #url {
	outline: none !important;
	box-shadow: 0 0 8px rgb(255, 204, 92);
}
#url:focus #url {
	outline: none !important;
	box-shadow: none;
	/* box-shadow: 0 0 4px rgb(255, 204, 92) !important; */
}
#url:invalid {
	outline: none !important;
	box-shadow: none ;
	/* box-shadow: 0 0 4px rgb(255, 111, 105) !important; */
}
#url:valid {
	outline: none !important;
	box-shadow: none;
	/* box-shadow: 0 0 4px rgb(150, 206, 180) !important; */
}

/*––––––––––––––––––*/
/*––––– Puzzle –––––*/
/*––––––––––––––––––*/
#puzzle-img {
	display: none;
	position: absolute;
	bottom: 0;
	height: 91%;
	width: 100%;
	z-index: 1;
}

#pieces-container {
	display: none;
	position: absolute;
	height: 100%;
	width: 100%;
	z-index: 2;
}

#no-scroll {
	overflow: auto;
}

#slots-container {
	display: none;
	font-size: 0;/* remove white space */
	position: absolute;
	bottom: 0;
	z-index: 90;
}

.slot {
	float: left;
	background: #fff;
	opacity: .75;
}

.slot-hover {
	transition: ease-in-out 200ms;
	opacity: 0.4;
	box-shadow: inset 0 5px 15px rgba(0, 0, 0, .5);
}

.ui-draggable {
	cursor: move;
	box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
}

.piece {
	position: absolute;
}

.scale-up-fast {
	animation: scale-up forwards 250ms;
}

.packet {
	animation: skew infinite 1000ms;
	margin: 4% 0%;
	max-width: 100%;
	cursor: pointer;
}


/*–––––––––––––––––––––––––––––––––––––––––––––––––––––*/
/*––––– Factory, Underwater and Server Animations –––––*/
/*–––––––––––––––––––––––––––––––––––––––––––––––––––––*/
#factory-animation,
#underwater-animation {
	position: absolute;
  	margin: auto;
  	left: -100%;
  	right: -100%;
  	top: -100%;
  	bottom: -100%;
}
#factory {
	background: url("../images/factory.png");
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
}
#underwater {
	background: url("../images/underwater.png");
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
}

#server-animation {
	object-fit: cover;
	width: 100%;
	height: 100%;
}

/*––––––––––––––––––––––––––––––––*/
/*––––– Ruuhkanhallinta (Eeva)–––––*/
/*––––––––––––––––––––––––––––––––*/
#traffic-control {
	background-image: url(../images/bittinen_tausta.png);
	background-position: center;
	background-size: 100vw 100vh;
	background-repeat: no-repeat;
}

/* #info {
	background: #96CEB4;
	padding: 20px;
	border-radius: 10px 40px;
	z-index: 2;
	box-shadow: 2px 2px 2px grey;
} */

#paketti {
	position: absolute;
	overflow: hidden;
	top: 20%;
	height: 60%;
	/* right: 1890px;
	bottom: -420px; */
	z-index: 2;
}
#paketti1 {
	position: relative;
	top: 50%;
	height: 50%;
}

#poliisi {
	position: absolute;
	overflow: hidden;
	top: 20%;
	height: 60%;
	/* left: 1900px;
	bottom: -440px;*/
	z-index: 2; 
}

#poliisi1 {
	height: 100%;
}

.cloud {
	position: absolute;
	height: 50%;
	z-index: 1;
}

#cloudcontainer {
	overflow-x: hidden;
	position: absolute;
	width: 100%;
	height: 500px;
}

/*––––––––––––––––––––––––––––––––*/
/*––––– Small screen settings–––––*/
/*––––––––––––––––––––––––––––––––*/
@media only screen and (max-width: 850px) {
	#url {
		font-size: 10px;
	}
	#overlay {
		top: -1%;
		left: 5%;
		width: 90%;
		max-height: 85vh;
		padding: 3%;
		font-size: 12px;
	}
}
@media only screen and (max-width: 500px) {
	* {
		transition: none !important;
	}

	#warning {
		animation-name: bgColor;
		animation-duration: 10s;
		animation-iteration-count: infinite;
		animation-fill-mode: forwards;
		display: flex;
		align-items: center;
		justify-content: center;
		padding: 0 5%;
		z-index: 100;
		width: 90%;
		height: 100%;
	}
}

